Fix some errors and minify other stuff

--- a/InvenietisPortal/Content/Site.less
+++ b/InvenietisPortal/Content/Site.less
@@ -119,11 +119,14 @@ header .title
 	}
 }
 
+.htitle {display: none;}
+
 section
 {
 	padding: 50px 0;
 		
-	h1{ text-align: center; margin-top: 0; margin-bottom: 15px; font-family: "Lucida Sans Unicode", Helvetica, Arial, sans-serif;}
+	h2{ text-align: center; margin-top: 0; margin-bottom: 15px; font-family: "Lucida Sans Unicode", Helvetica, Arial, sans-serif;}
+	//h1{ text-align: center; margin-top: 0; margin-bottom: 15px; font-family: "Lucida Sans Unicode", Helvetica, Arial, sans-serif;}
 	.text{ font-size: 17px; line-height: 25px; }
 	em
 	{
@@ -261,35 +264,6 @@ footer
 	}
 }
 
-.contact
-{
-	h1
-	{
-		font-size: 46px;
-		margin-bottom: 60px;
-		color: @orange;
-	}
-	.well
-	{
-		background: #fff; 
-	}
-	h3
-	{
-		text-align: center;
-		margin-bottom: 20px;
-	}
-	.addr
-	{
-		padding-bottom: 20px;
-
-		.map
-		{
-			padding-bottom: 20px;
-		}
-	}
-	
-}
-
 @media (max-width: 767px)
 {
 	body
@@ -311,7 +285,7 @@ footer
 		.keywords
 		{
 			top: 115px;
-			h1{ font-size: 26px; line-height: 30px; }
+			h2{ font-size: 26px; line-height: 30px; }
 		}
 	}
 	footer
@@ -351,7 +325,7 @@ footer
 		.keywords
 		{
 			top: 75px;
-			h1
+			h2
 			{ 
 				font-size: 20px; 
 				line-height: 25px;
@@ -391,7 +365,7 @@ footer
 	section
 	{
 		padding: 25px;
-		h1
+		h2
 		{
 			font-size: 30px;
 		}
