--- a/InvenietisPortal/Views/Home/Index.en.cshtml
+++ b/InvenietisPortal/Views/Home/Index.en.cshtml
@@ -12,6 +12,7 @@
                             <div class="span12">
                                 <div class="full-logo box" >
                                     <img alt="Invenietis" src="@Url.Content("~/content/logo.png")" />
+                                    <h1 class="htitle">Invenietis</h1>
                                     <div class="keywords">
                                         <h1 class="active">Supports and performs<br />your IT projects</h1>
                                     </div>
@@ -27,7 +28,7 @@
                 <section class="container">
                     <div class="row-fluid">
                         <div class="span8">
-                            <h1>The Invenietis DNA</h1>
+                            <h2>The Invenietis DNA</h2>
                             <div class="text">
                                 <p>Invenietis is a Paris-based firm of eight software engineering enthusiasts. We started with two people in 2004; today we are a fully-operational team ready to solve today's complex Web and office automation projects. We help our partners and customers quickly add value by focusing entirely on their core business. We build trust through individual relationships to drive long-term projects.</p>
                             </div>
@@ -50,7 +51,7 @@
                             <img src="@Url.Content("~/content/images/tech.png")" alt="tech" />
                         </div>
                         <div class="span8">
-                            <h1>Technology</h1>
+                            <h2>Technology</h2>
                             <div class="text">
                                 <p>
                                     Technical enthusiasts that we are, we have always worked on promising, cutting-edge technologies. We carefully and continuously select techniques and methods, retaining only those that have proven effective for a particular context. We adopted Microsoft solutions from the outset, and have confidence in the future of their development environment. Our designs are in line with the latest radical changes in the Web and are often based on the traditional ASP.Net MVC/SQL Server pair with client interfaces using HTML5, CSS3 and JavaScript.
@@ -69,7 +70,7 @@
                 <section class="container">
                     <div class="row-fluid">
                         <div class="span8">
-                            <h1>Our approach</h1>
+                            <h2>Our approach</h2>
                             <div class="text">
                                 <p>
                                     The projects we have completed over the years, each with their specific requirements, have helped us improve our methods, our thinking, and our solutions. We do not try to find THE answer, but rather we select the solution best suited to each situation, targeting long-term viability and upgradability. Our qualified software components and tools are the result of our tested modular designs. These components, developed either in-house or by third parties, are optimized to work together to accelerate and secure new development.
@@ -94,7 +95,7 @@
                             <img src="@Url.Content("~/content/images/env.png")" alt="env" />
                         </div>
                         <div class="span8">
-                            <h1>The environment</h1>
+                            <h2>The environment</h2>
                             <div class="text">
                                 <p>
                                     The Web is not our only sandbox. We also work in office automation environments such as the CiviKey project. This free open-source project is designed to make it easier for people with physical handicaps to use electronic devices and computers. We are developing this software in partnership with the Alcatel-Lucent group, Intech’INFO school of computer science, the Stéria Foundation, and the Garches hospital's New Technology Platform (PFNT).
