--- a/InvenietisPortal/Views/Home/Legal.en.cshtml
+++ b/InvenietisPortal/Views/Home/Legal.en.cshtml
@@ -10,13 +10,13 @@
             <section class="container">
                 <div class="row-fluid">
                     <div class="span12">
-                        <h2>Legal Terms</h2>
-                        <h3>General informations</h3>
+                        <h1>Legal Terms</h1>
+                        <h2>General informations</h2>
                     </div>
                 </div>
                 <div class="row-fluid">
                     <div class="span6 well">
-                        <h4>Publisher of this Site:</h4>
+                        <h3>Publisher of this Site:</h3>
                         <address>
                             <strong>Invenietis</strong><br />
                             23 rue pelleport<br />
@@ -24,13 +24,13 @@
                             FRANCE<br />
                             P : + 33 1 43 67 88 75
                         </address>
-                        Limited liability company with a capital of 80000 euros<br />
+                        Limited liability company with a capital of 80 000 euros<br />
                         Code APE/NAF: 6201 Z - Programmation Informatique<br />
                         RCS Paris B 451 482 822<br />
                         TVA n° FR36 451 482 822<br />
                     </div>
                     <div class="span6 well">
-                        <h4>Hosting service provider of this Site:</h4>
+                        <h3>Hosting service provider of this Site:</h3>
                         <address>
                             <strong>Naitways</strong><br />
                             NAITWAYS SAS<br />
@@ -38,14 +38,14 @@
                             91024 Évry CEDEX<br />
                             FRANCE
                         </address>
-                        Simplified joint-stock company with a capital of 25000 euros<br />
+                        Simplified joint-stock company with a capital of 25 000 euros<br />
                         RCS Evry B 508 823 614<br />
                         <a href="http://naitways.com/">http://naitways.com/</a><br />
                     </div>
                 </div>
                 <div class="row-fluid">
                     <div class="span12 well">
-                        <h3>Information technology, data files and civil liberties</h3>
+                        <h2>Information technology, data files and civil liberties</h2>
                         Users providing this personal information by the intermediary of the Website have, in compliance with the provisions of the law, a right of access to the data concerning them, as well as the right to obtain the modification, rectification or deletion of these data. To exercise this right, they need only address a request for modifications of the information concerning them. Users have a right of opposition, of access, and of rectification of the data concerning them. Thus, Users can demand that the data concerning them be rectified, completed, clarified, updated or erased if they are inexact, incomplete, ambiguous, expired or if their collection, utilisation, communication or conservation are prohibited. Users may exercise these rights by post mail or e-mail to:<br />
                         admin@invenietis.com<br />
                         or <br />
