--- a/InvenietisPortal/Views/Shared/_Layout.cshtml
+++ b/InvenietisPortal/Views/Shared/_Layout.cshtml
@@ -8,8 +8,8 @@
     <link href="@Url.Content("~/Content/bootstrap.min.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/bootstrap-responsive.min.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/Site.less")" rel="stylesheet">
-    <script type="text/javascript" charset="utf-8" src="@Url.Content("~/Scripts/jquery-1.8.2.js")"></script>
-    <script type="text/javascript" charset="utf-8" src="@Url.Content("~/Scripts/bootstrap.js")"></script>
+    <script type="text/javascript" charset="utf-8" src="@Url.Content("~/Scripts/jquery-1.8.2.min.js")"></script>
+    <script type="text/javascript" charset="utf-8" src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
     @RenderSection( "header", false )
     <title>@ViewBag.Title</title>
 </head>
