--- a/InvenietisPortal/Views/Home/Contact.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Contact.fr.cshtml
@@ -24,6 +24,11 @@
     <div class="row-fluid top-bx">
         <div class="span12 ">
             <section class="container">
+                <div class="row-fluid htitle">
+                    <div class="span12">
+                        <h1>Contacts</h1>
+                    </div>
+                </div>
                 <div class="row-fluid">
                     <div class="span4 center">
                         <strong class="lead">Téléphone, email :</strong><br /><br />
@@ -53,31 +58,31 @@
             </section>
         </div>
     </div>
-<div id="infomapTech">
-    <div class="infomap">
-        <address>
-            <img src="/Content/images/marcker.png" alt="logo" />
-            <strong>Invenietis - Centre technique</strong><br />
-            10 rue Mercoeur<br>
-            Batiment A - 3e étage<br>
-            75011 - Paris<br>
-            France
-        </address>
-        <a target="_blank" href="https://maps.google.fr/maps?q=10+Rue+Merc%C5%93ur,+Paris&hl=fr&ie=UTF8&sll=48.863091,2.404289&sspn=0.006882,0.016512&oq=10&t=h&gl=fr&hnear=10+Rue+Merc%C5%93ur,+75011+Paris,+%C3%8Ele-de-France&z=17">Voir sur Google Map</a>
+    <div id="infomapTech">
+        <div class="infomap">
+            <address>
+                <img src="/Content/images/marcker.png" alt="logo" />
+                <strong>Invenietis - Centre technique</strong><br />
+                10 rue Mercoeur<br>
+                Batiment A - 3e étage<br>
+                75011 - Paris<br>
+                France
+            </address>
+            <a target="_blank" href="https://maps.google.fr/maps?q=10+Rue+Merc%C5%93ur,+Paris&hl=fr&ie=UTF8&sll=48.863091,2.404289&sspn=0.006882,0.016512&oq=10&t=h&gl=fr&hnear=10+Rue+Merc%C5%93ur,+75011+Paris,+%C3%8Ele-de-France&z=17">Voir sur Google Map</a>
+        </div>
     </div>
-</div>
-<div id="infomapHQ">
-    <div class="infomap">
-        <address>
-            <img src="/Content/images/marcker.png" alt="logo" />
-            <strong>Invenietis - Siège social</strong><br />
-            23 rue Pelleport<br>
-            75020 - Paris<br>
-            France
-        </address>
-        <a target="_blank" href="https://maps.google.fr/maps?q=23+Rue+Pelleport,+Paris&hl=fr&ie=UTF8&sll=48.85472,2.384012&sspn=0.013766,0.033023&oq=23&t=h&gl=fr&hnear=23+Rue+Pelleport,+75020+Paris,+%C3%8Ele-de-France&z=17">Voir sur Google Map</a>
+    <div id="infomapHQ">
+        <div class="infomap">
+            <address>
+                <img src="/Content/images/marcker.png" alt="logo" />
+                <strong>Invenietis - Siège social</strong><br />
+                23 rue Pelleport<br>
+                75020 - Paris<br>
+                France
+            </address>
+            <a target="_blank" href="https://maps.google.fr/maps?q=23+Rue+Pelleport,+Paris&hl=fr&ie=UTF8&sll=48.85472,2.384012&sspn=0.013766,0.033023&oq=23&t=h&gl=fr&hnear=23+Rue+Pelleport,+75020+Paris,+%C3%8Ele-de-France&z=17">Voir sur Google Map</a>
+        </div>
     </div>
-</div>
 
 @section js {
     <script type="text/javascript">
