--- a/InvenietisPortal/Views/Home/Index.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Index.fr.cshtml
@@ -12,8 +12,9 @@
                             <div class="span12">
                                 <div class="full-logo box" >
                                     <img alt="Invenietis" src="@Url.Content("~/content/logo.png")" />
+                                    <h1 class="htitle">Invenietis</h1>
                                     <div class="keywords">
-                                        <h1 class="active">Accompagne et réalise<br />vos projets IT</h1>
+                                        <h2 class="active">Accompagne et réalise<br />vos projets IT</h2>
                                     </div>
                                 </div>
                             </div>
@@ -27,7 +28,7 @@
                 <section class="container">
                     <div class="row-fluid">
                         <div class="span8">
-                            <h1>ADN</h1>
+                            <h2>ADN</h2>
                             <div class="text">
                                 <p>Invenietis est une entreprise basée à Paris, animée par 8 passionnés, spécialistes en Ingénierie Logicielle. L’aventure a commencé en 2004 avec 2 personnes pour arriver aujourd’hui à une équipe opérationnelle, cohérente et disponible pour résoudre les problématiques complexes des projets web et bureautiques actuels. Notre entreprise est avant tout un moyen d’aider nos partenaires et clients à créer rapidement de la valeur en leur permettant de se consacrer pleinement à leur cœur de métier. Nous cherchons à établir des relations de confiance, d’humain à humain, pour accompagner les projets sur le long terme.</p>
                             </div>
@@ -51,7 +52,7 @@
                             <img src="@Url.Content("~/content/images/tech.png")" alt="tech" />
                         </div>
                         <div class="span8">
-                            <h1>Technique</h1>
+                            <h2>Technique</h2>
                             <div class="text">
                                 <p>
                                     Passionnés d’aspects techniques, nous avons toujours fait en sorte de travailler sur les technologies de pointe et porteuses d’avenir. Nous évoluons en suivant toujours les mêmes principes de sélection fine des technologies, ne retenant que celles qui font preuve d’efficience dans un contexte donné. Nous avons dès le commencement pris le parti de nous tourner vers l’environnement Microsoft et nous continuons plus que jamais à croire en l’avenir de cet écosystème. En ligne avec les évolutions radicales du Web d’aujourd’hui, nos architectures s’appuient souvent sur le couple classique ASP.Net MVC / SQL Server associé à des interfaces clientes HTML5, CSS3 et JavaScript.
@@ -71,7 +72,7 @@
                 <section class="container">
                     <div class="row-fluid">
                         <div class="span8">
-                            <h1>Approche</h1>
+                            <h2>Approche</h2>
                             <div class="text">
                                 <p>
                                     Tous les projets que nous avons réalisés nous ont permis d’améliorer nos méthodes, nos réflexions et nos solutions, chacun à leurs mesures et avec leurs spécificités. Nous ne cherchons pas LA réponse mais sélectionnons les plus adaptées à chaque situation, avec le souci permanent de leur pérennité et de leur évolutivité. Les différentes approches modulaires que nous avons conçues et appliquées avec succès dans nos projets se concrétisent en un ensemble de composants logiciels et d’outils qualifiés. Ces composants, issus de notre R&D ou externes, optimisés pour fonctionner ensemble, accélèrent et sécurisent les nouveaux développements.
@@ -98,7 +99,7 @@
                             <img src="@Url.Content("~/content/images/env.png")" alt="env" />
                         </div>
                         <div class="span8">
-                            <h1>Environnement</h1>
+                            <h2>Environnement</h2>
                             <div class="text">
                                 <p>
                                     Le web n’est pas notre seul terrain de jeu. Nous travaillons également sur des environnements bureautiques comme pour le projet CiviKey. Ce projet open source et gratuit est destiné aux personnes en situation de handicap. Il leur permet d’utiliser l’outil informatique avec plus de facilité en les aidant au quotidien sur toutes les interactions homme-machine. Nous développons ce logiciel en partenariat avec l’école d’informatique IN’TECH INFO, Alcatel-Lucent, la fondation Stéria et la Plateforme des Nouvelles Technologies de l’hôpital de Garches (PFNT).
