--- a/InvenietisPortal/Views/Home/Cuke.cshtml
+++ b/InvenietisPortal/Views/Home/Cuke.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Invenietis - Cuke";
+    ViewBag.Title = "Invenietis - Cuke CMS Open source .Net";
     ViewBag.Keywords = "";
     ViewBag.Description = "";
 }
