--- a/InvenietisPortal/Views/Home/Index.en.cshtml
+++ b/InvenietisPortal/Views/Home/Index.en.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.en.cshtml";
-    ViewBag.Title = "Invenietis - Presentation";
+    ViewBag.Title = "Invenietis - Supports and performs your IT projects";
     ViewBag.Keywords = "";
     ViewBag.Description = "";
 }
