--- a/InvenietisPortal/Views/Home/Index.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Index.fr.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.fr.cshtml";
-    ViewBag.Title = "Invenietis - Présentation";
+    ViewBag.Title = "Invenietis - Accompagne et réalise vos projets IT";
     ViewBag.Keywords = "";
     ViewBag.Description = "";
 }
