Add Garches Foundation and fix a little bug

--- a/InvenietisPortal/Views/Home/Index.en.cshtml
+++ b/InvenietisPortal/Views/Home/Index.en.cshtml
@@ -98,7 +98,7 @@
                             <h2>The environment</h2>
                             <div class="text">
                                 <p>
-                                    The Web is not our only sandbox. We also work in office automation environments such as the CiviKey project. This free open-source project is designed to make it easier for people with physical handicaps to use electronic devices and computers. We are developing this software in partnership with the Alcatel-Lucent group, Intech’INFO school of computer science, the Stéria Foundation, and the Garches hospital's New Technology Platform (PFNT).
+                                    The Web is not our only sandbox. We also work in office automation environments such as the CiviKey project. This free open-source project is designed to make it easier for people with physical handicaps to use electronic devices and computers. We are developing this software in partnership with the Intech’INFO school of computer science, the Alcatel-Lucent group, the Garches Foundation, the Stéria Foundation, and the Garches hospital's New Technology Platform (PFNT).
                                 </p>
                             </div>
                             <em>
