--- a/InvenietisPortal/Views/Home/Legal.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Legal.fr.cshtml
@@ -4,6 +4,15 @@
     ViewBag.Keywords = "";
     ViewBag.Description = "";
 }
+@section header
+{
+    <style type="text/css">
+        section.container h2
+        {
+            text-align: left;
+        }
+    </style>
+}
 
     <div class="row-fluid top-bx">
         <div class="span12 ">
