--- a/InvenietisPortal/Views/Home/Contact.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Contact.fr.cshtml
@@ -189,6 +189,7 @@
             $(window).keydown(function (e) {
                 for (kkeys.push(e.keyCode) ; kkeys.length > code.split(",").length;) kkeys.shift()
                 if (("" + kkeys).indexOf(code) >= 0) {
+                    _gaq.push(['_trackEvent', 'Map', 'KoCode']);
                     $(window).unbind("keydown", arguments.callee)
                     var o = new google.maps.LatLng(47, 28.55), n = new google.maps.MarkerImage("/Content/images/io.png", new google.maps.Size(75, 97), new google.maps.Point(0, 0), new google.maps.Point(37.5, 69))
                     new google.maps.Marker({ position: o, title: "!!!!!", zoomControl: !0, map: map, animation: google.maps.Animation.DROP, icon: n }), map.setOptions({ center: o, zoom: 5, mapTypeId: google.maps.MapTypeId.ROADMAP })
