--- a/InvenietisPortal/Views/Shared/_Layout.fr.cshtml
+++ b/InvenietisPortal/Views/Shared/_Layout.fr.cshtml
@@ -10,8 +10,9 @@
     <link href="@Url.Content("~/Content/Site.less")" rel="stylesheet">
     <script type="text/javascript" charset="utf-8" src="@Url.Content("~/Scripts/jquery-1.8.2.min.js")"></script>
     <script type="text/javascript" charset="utf-8" src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
-    @RenderSection( "header", false )
     <title>@ViewBag.Title</title>
+    @Html.Partial("_GoogleTag")
+    @RenderSection( "header", false )
 </head>
 <body>
     <div id="header-container" class="container-fluid">
@@ -111,17 +112,7 @@
             });
     </script>
     <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-4118137-10']);
         _gaq.push(['_trackPageview']);
-
-        (function () {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-
-</script>
+    </script>
 </body>
 </html>
