--- a/InvenietisPortal/Views/Shared/_Layout.cshtml
+++ b/InvenietisPortal/Views/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
     <link href="@Url.Content("~/Content/bootstrap.min.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/bootstrap-responsive.min.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/Site.less")" rel="stylesheet">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="text/javascript" charset="utf-8" src="@Url.Content("~/Scripts/jquery-1.8.2.min.js")"></script>
     <script type="text/javascript" charset="utf-8" src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
     <title>@ViewBag.Title</title>
