--- a/InvenietisPortal/Views/Home/Cuke.cshtml
+++ b/InvenietisPortal/Views/Home/Cuke.cshtml
@@ -36,7 +36,7 @@
             <section class="container">
                 <div class="row-fluid">
                     <div class="span12">
-                        <h2>Un portails web dynamique</h2>
+                        <h2>Un portail web dynamique</h2>
                         <p>Le concept de portail web dans Cuke permet dans une seule et même infrastructure logicielle de placer plusieurs « portails web ». Chaque portail est indépendant (chaque espace de travail étanche), et n’a pas forcément connaissance des autres portails qui se trouvent sur la même plateforme.  Ils peuvent avoir leurs propres noms de domaine.</p>
 
                         <p>Un administrateur peut, suivant les choix, administrer un ou plusieurs portails. Ce système permet par exemple de partager, pour plusieurs sites web, une base de données commune pour faciliter la gestion et/ou la synchronisation d’information. En plus, les utilisateurs des portails peuvent être communs ou non à chaque portail, ce qui permet de centraliser la gestion des utilisateurs dans certains cas.</p>
