--- a/InvenietisPortal/Views/Blog/Index.cshtml
+++ b/InvenietisPortal/Views/Blog/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.en.cshtml";
+    //Layout = "~/Views/Shared/_Layout.en.cshtml";
     ViewBag.Title = "Invenietis Blog";
     ViewBag.Keywords = "";
     ViewBag.Description = "";
